# blue-mancing

./: .gitignore  Cargo.toml  GUIDE.md  README.md  blue-mancing.manifest  build.rs  installer.nsi  latest.json  main.py
.github/workflows/: release.yml
config/: settings.json
html/: esp_overlay.html  main.html  overlay.html
scripts/: sync_version.py
src/: input.rs  lib.rs  log_main.rs  main.rs  window.rs
src/fish/: base.rs  fish_service.rs  mod.rs
src/screen_reader/: base.rs  image_service.rs  mod.rs  screen_service.rs
src/ui/: mod.rs  overview_api.rs  stats_api.rs  ui_service.py  ui_service.rs
src/utils/: bot_state.rs  keybinds.rs  mod.rs  path.rs  spelling.rs  updater.rs
tests/: benchmark_fish_detection.py  fish_detection_benchmark.rs
