[package]
name = "blue-mancing"
version = "2.1.3"
edition = "2021"
description = "Auto fishing bot for Blue Protocol: Star Resonance"
authors = ["bayusegara27"]
build = "build.rs"

[features]
default = ["gui"]
gui = ["wry", "tao"]

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full", "sync", "time", "macros", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing
image = "0.25"
opencv = { version = "0.93", default-features = true }

# OCR for fish detection (like Python EasyOCR)
rusty-tesseract = "1.1.10"

# Screen capture
screenshots = "0.8"

# HTTP client for updates
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }

# Futures utilities
futures-util = "0.3"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Path handling
directories = "5.0"

# Markdown parsing
pulldown-cmark = "0.12"

# Global hotkeys
global-hotkey = "0.6"

# Sync primitives
parking_lot = "0.12"
once_cell = "1.20"

# WebView for UI (optional - Windows/macOS only)
wry = { version = "0.47", optional = true }
tao = { version = "0.30", optional = true }

# Input simulation
[target.'cfg(windows)'.dependencies]
enigo = "0.2"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading"
]}

# Build dependencies for Windows manifest
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(unix)'.dependencies]
# Linux input simulation (stub for compilation)
# Note: Full functionality requires Windows

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "blue-mancing"
path = "src/main.rs"
